examples/c/error-codes/violates-constraint/fatal/CV-CER6-bad-static.output
CV-CER6-bad-static.c:6:12: error: member reference type 'struct a' is not a pointer; did you mean to use '.'?
 int c = &a->b;
          ~^~
           .
CV-CER6-bad-static.c:6:10: error: cannot take the address of an rvalue of type 'int'
 int c = &a->b;
         ^~~~~
2 errors generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
